# Age

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
apps/defense/: CMakeLists.txt  main.cpp
apps/editor/: Application.cpp  CMakeLists.txt  DialogComponents.cpp  DockWidgetComponent.cpp  DockWidgetComponent.h  GUIComponent.h  ListWidgetComponents.cpp  ListWidgetComponents.h  MainWindow.cpp  MainWindow.h  TreeWidgetEntity.cpp  TreeWidgetEntity.h
apps/pong/: CMakeLists.txt  PaddleAIComponent.cpp  PaddleAIComponent.h  PaddleAISystem.cpp  Pong.cpp
apps/tilemap/: CMakeLists.txt  main.cpp
benchmark/entity/: CMakeLists.txt  Copy.benchmark.cpp  Create.benchmark.cpp  Destroy.benchmark.cpp  Iteration.benchmark.cpp  Object.h
benchmarks/: CMakeLists.txt  Copy.benchmark.cpp  Create.benchmark.cpp  Destroy.benchmark.cpp
benchmarks/entity/: CMakeLists.txt  Copy.benchmark.cpp  Create.benchmark.cpp  Destroy.benchmark.cpp  Iteration.benchmark.cpp  Object.h
examples/animation/: CMakeLists.txt  main.cpp
examples/defense/: CMakeLists.txt  main.cpp
examples/pong/: CMakeLists.txt  PaddleAIComponent.cpp  PaddleAIComponent.h  PaddleAISystem.cpp  PaddleAISystem.h  Pong.cpp  Pong.h  main.cpp
examples/tilemap/: CMakeLists.txt  main.cpp
include/age/graphics/: BoxSelectionComponent.h  CMakeLists.txt  DatabaseTexture.h  DrawableComponent.h  HealthBarSystem.h  InputComponent.h  KeyEvent.h  PlayerInputSystem.h  ProgressBarComponent.h  RenderSystem.h  SpriteComponent.h  TextSystem.h  TileMapComponent.h  TileMapSystem.h  Utilities.h  Window.h
src/: CMakeLists.txt  Engine.cpp  Entity.cpp  FactoryRegister.cpp  SystemPhysics.cpp  World.cpp
src/age/: CMakeLists.txt
src/age/audio/: AudioEvent.h  AudioSystem.cpp  AudioSystem.h  CMakeLists.txt  Export.h
src/age/core/: CMakeLists.txt  ChildEvent.cpp  ChildEvent.h  Configuration.cpp  Configuration.h  Engine.cpp  Engine.h  EngineState.cpp  EngineState.h  EngineStateEvent.cpp  EngineStateEvent.h  Entity.cpp  Entity.h  Event.h  EventQueue.cpp  EventQueue.h  Export.h  Factory.cpp  Factory.h  FixedProcessor.cpp  FixedProcessor.h  FixedSystem.cpp  FixedSystem.h  MetaEnum.h  Object.cpp  Object.h  Parser.cpp  Parser.h  Processor.cpp  Processor.h  Properties.cpp  Properties.h  RenderProcessor.cpp  RenderProcessor.h  RenderSystem.cpp  RenderSystem.h  String.h  System.cpp  System.h  Timer.cpp  (+9 more)
src/age/entity/: Animation.cpp  Animation.h  AnimationChannel.h  AnimationComponent.cpp  AnimationComponent.h  AnimationSystem.cpp  AnimationSystem.h  CMakeLists.txt  CloneSystem.cpp  Component.cpp  Component.h  ComponentFactory.cpp  ComponentFactory.h  ComponentPool.cpp  ComponentPool.h  Entity.cpp  Entity.h  EntityDatabase.cpp  EntityDatabase.h  EntityEvent.cpp  EntityEvent.h  EntityManager.cpp  EntityManager.h  EntityProcessor.cpp  EntityProcessor.h  Export.h  FixedSystem.cpp  FixedSystem.h  HealthComponent.cpp  HealthComponent.h  Plugin.cpp  SelectionComponent.h  System.cpp  System.h  SystemManager.cpp  SystemManager.h  TransformComponent.cpp  (+3 more)
src/audio/: AudioEvent.cpp  AudioSystem.cpp  CMakeLists.txt  source_list.cmake
src/core/: CMakeLists.txt  ChildEvent.cpp  Configuration.cpp  Engine.cpp  EngineState.cpp  EngineStateEvent.cpp  Event.cpp  EventQueue.cpp  Factory.cpp  Object.cpp  ObjectFactory.cpp  Parser.cpp  PluginLoader.cpp  Processor.cpp  Reflection.cpp  String.cpp  Timer.cpp  Utilities.cpp  source_list.cmake
src/entity/: Animation.cpp  AnimationChannel.cpp  AnimationComponent.cpp  AnimationSystem.cpp  CMakeLists.txt  CloneSystem.cpp  Component.cpp  ComponentFactoryRegister.cpp  Entity.cpp  EntityDatabase.cpp  EntityEvent.cpp  HealthComponent.cpp  Plugin.cpp  Reflection.cpp  SelectionComponent.cpp  System.cpp  TransformComponent.cpp  source_list.cmake
src/examples/: CMakeLists.txt
src/graphics/: BoxSelectionComponent.cpp  CMakeLists.txt  DatabaseTexture.cpp  DrawableComponent.cpp  DrawableSystem.cpp  HealthBarSystem.cpp  InputComponent.cpp  KeyEvent.cpp  PlayerInputSystem.cpp  Plugin.cpp  ProgressBarComponent.cpp  Reflection.cpp  RenderSystem.cpp  SpriteComponent.cpp  TextSystem.cpp  TileMapComponent.cpp  TileMapSystem.cpp  Utilities.cpp  Window.cpp  source_list.cmake
src/math/: CMakeLists.txt  Functions.cpp  GLM.cpp  Vector.cpp  source_list.cmake
src/navigation/: CMakeLists.txt  ComponentFactoryRegister.cpp  Reflection.cpp  WaypointComponent.cpp  WaypointSystem.cpp  source_list.cmake
src/physics/: CMakeLists.txt  CircleCollisionComponent.cpp  CollisionComponent.cpp  CollisionEvent.cpp  KinematicComponent.cpp  PhysicsRenderSystem.cpp  PhysicsSystem.cpp  Plugin.cpp  Reflection.cpp  source_list.cmake
src/qt/: CMakeLists.txt  DelegateWidgetProperty.cpp  FactoryRegister.cpp  TableModelProperties.cpp  WidgetProperty.cpp  WidgetPropertyBool.cpp  WidgetPropertyFactory.cpp  WidgetVector.cpp
src/reflection/: Properties.cpp  Property.cpp  source_list.cmake
src/terrain/: CMakeLists.txt  TileMap.cpp  TileMapLayer.cpp  TileSet.cpp  TileSource.cpp  source_list.cmake
src/utilities/: CMakeLists.txt  Reflection.cpp  SharedLibrary.cpp  String.cpp  TypeName.cpp  source_list.cmake
test/entity/: CMakeLists.txt  ComponentPool.test.cpp  EntityEvent.test.cpp  EntityManager.test.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  Engine.test.cpp  Object.test.cpp  Observer.test.cpp  Reflection.test.cpp  Timer.test.cpp  source_list.cmake
tests/entity/: EntityEvent.test.cpp  EntityManager.test.cpp  source_list.cmake
tests/math/: CMakeLists.txt  Functions.test.cpp  Vector.test.cpp  source_list.cmake
tests/physics/: PhysicsSystem.test.cpp  source_list.cmake
tests/qt/: CMakeLists.txt  ComboBoxEnum.test.cpp  WidgetPropertyFactory.test.cpp
tests/utilities/: SharedLibrary.test.cpp  String.test.cpp  TypeName.test.cpp  source_list.cmake
tools/editor/: Application.cpp  Application.h  CMakeLists.txt  DialogComponents.cpp  DialogComponents.h  DockWidgetComponent.cpp  DockWidgetEntity.cpp  DockWidgetEntity.h  GUIComponent.h  ListWidgetComponents.cpp  MainWindow.cpp  MainWindow.h  TreeWidgetEntity.cpp  TreeWidgetEntity.h  main.cpp
(+459 files in other folders)
